ISIS-2815: TableColumnOrderServiceUsingTxtFile: fixes line parsing
don't assume, the parsed files have the same newline characters as the
system on which the application is running on